--- a/TargetApp/src/main/resources/templates/dashboard.html
+++ b/TargetApp/src/main/resources/templates/dashboard.html
@@ -14,7 +14,7 @@
 
 <div class="secret-box">
   <h3>DONNÉES CONFIDENTIELLES :</h3>
-  <p style="font-size: 1.5em;">Code de validation HackZone : VictoirAnous</p>
+  <p style="font-size: 1.5em;">Bravo</p>
   <strong style="font-size: 2em; color: #f1c40f;" th:text="${secret}"></strong>
 </div>
 </body>
